config/helm/ciliumnetworkpolicy_capi-kubeadm-bootstrap-controller-manager.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    cluster.x-k8s.io/provider: bootstrap-kubeadm
    control-plane: controller-manager
    helm.sh/chart: cluster-api
  name: capi-kubeadm-bootstrap-controller-manager
spec:
  endpointSelector:
    matchLabels:
      cluster.x-k8s.io/provider: bootstrap-kubeadm
      control-plane: controller-manager
  egress:
    - toEntities:
        - kube-apiserver
